force-app/main/default/objects/NegoScope__c/fields/Acc_Global_Location__c.field-meta.xml
<CustomField>
    <fullName>Acc_Global_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acc Global Location</label>
    <referenceTo>Global_Location__c</referenceTo>
    <relationshipLabel>Nego Scopes (Acc Global Location)</relationshipLabel>
    <relationshipName>Nego_Scopes1</relationshipName>
    <type>Lookup</type>
</CustomField>