force-app/main/default/objects/NegoScope__c/fields/Active_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>Active_Taxes_New__c</fullName>
    <description>Last Actives Taxes validated for Json format</description>
    <label>Active Taxes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>