force-app/main/default/objects/NegoScope__c/fields/Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Collection_Type__c</fullName>
    <description>Specify the Type of Offer/Assortment managing for the Client/Supplier for the linked agreement</description>
    <inlineHelpText>Préciser le Type d&apos;Offre/Gestion de l&apos;Assortiment pour le Client/Fournisseur pour l&apos;accord lié</inlineHelpText>
    <label>Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collection_Type</valueSetName>
    </valueSet>
</CustomField>