force-app/main/default/objects/NegoScope__c/fields/CostPrice_Rounding_Level__c.field-meta.xml
<CustomField>
    <fullName>CostPrice_Rounding_Level__c</fullName>
    <label>CostPrice Rounding Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rounding_Level</valueSetName>
    </valueSet>
</CustomField>