force-app/main/default/objects/NegoScope__c/fields/Discount_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>Discount_Taxes_New__c</fullName>
    <label>Discount Taxes New</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>