force-app/main/default/objects/NegoScope__c/fields/Incl_NewProduct__c.field-meta.xml
<CustomField>
    <fullName>Incl_NewProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include New Product</label>
    <type>Checkbox</type>
</CustomField>