force-app/main/default/objects/NegoScope__c/fields/Is_All__c.field-meta.xml
<CustomField>
    <fullName>Is_All__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The nego scope is the whole supplier.
Then, no additionnal argument need to be considered.
Is the default one.</description>
    <inlineHelpText>Préciser que le périmètre de négociation est l&apos;ensemble de tous les produits disponible. Aucun argument supplémentaire ne sera pris en compte.</inlineHelpText>
    <label>All Products</label>
    <type>Checkbox</type>
</CustomField>