force-app/main/default/objects/NegoScope__c/fields/Is_All_Brands__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Brands__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the nego scope is not the whole supplier (Is_all is negative).

This detail that the nego scope is including all the Brands of the supplier.

If no, user should detail the brand that will be considered (supplier negoscope brand table) and if the futur Brands linked to the supplier should be automatically included in the scope (Incl. New Brand field)</description>
    <inlineHelpText>Préciser si ce périmètre de négociation inclut toutes les marques du fournisseur. Si non, vous devez détailler les Marques qui doivent être prises en compte dans le périmètre et si d&apos;éventuelles futures Marques liées au fournisseur doivent également être incluses dans le périmètre par défaut.</inlineHelpText>
    <label>All Brands</label>
    <type>Checkbox</type>
</CustomField>