force-app/main/default/objects/NegoScope__c/fields/Is_Managed_By_ExternalSource__c.field-meta.xml
<CustomField>
    <fullName>Is_Managed_By_ExternalSource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If NS &amp; realted are managed by an external system</description>
    <label>Is Managed By External Source</label>
    <type>Checkbox</type>
</CustomField>