force-app/main/default/objects/NegoScope__c/fields/Is_Managing_FlatPrice_Rate_Promo__c.field-meta.xml
<CustomField>
    <fullName>Is_Managing_FlatPrice_Rate_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NS is managing a specific FlatPrice Promo Rate</description>
    <label>Is Managing FlatPrice Rate Promo</label>
    <type>Checkbox</type>
</CustomField>