force-app/main/default/objects/NegoScope__c/fields/Is_NS_PG_Refresh_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_NS_PG_Refresh_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NS PG Refresh Required</label>
    <type>Checkbox</type>
</CustomField>