force-app/main/default/objects/NegoScope__c/fields/Master_BU__c.field-meta.xml
<CustomField>
    <fullName>Master_BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference BU for the NS</description>
    <label>Master Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Orga_BU__c.Set_NS_MasterBU__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Nego Scopes (Business Unit)</relationshipLabel>
    <relationshipName>Nego_Scopes1</relationshipName>
    <type>Lookup</type>
</CustomField>