force-app/main/default/objects/NegoScope__c/fields/NetPrice_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>NetPrice_Taxes_New__c</fullName>
    <label>NetPrice Taxes New</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>