force-app/main/default/objects/NegoScope__c/fields/NS_Code__c.field-meta.xml
<CustomField>
    <fullName>NS_Code__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Nego Scope Code</label>
    <type>AutoNumber</type>
</CustomField>