force-app/main/default/objects/NegoScope__c/fields/NS_Code_Long__c.field-meta.xml
<CustomField>
    <fullName>NS_Code_Long__c</fullName>
    <formula>IF(ISBLANK(TEXT(NS_Code_Prefix__c)), &apos;&apos;,  TEXT(NS_Code_Prefix__c) &amp; &apos;-&apos;) &amp; 
IF(ISBLANK(NS_Code_Temp__c), NS_Code__c,NS_Code_Temp__c)</formula>
    <label>NS Code Long</label>
    <type>Text</type>
</CustomField>