force-app/main/default/objects/NegoScope__c/fields/NS_Code_Prefix__c.field-meta.xml
<CustomField>
    <fullName>NS_Code_Prefix__c</fullName>
    <label>NS Code Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>prefix1</fullName>
            </value>
            <value>
                <fullName>prefix2</fullName>
            </value>
            <value>
                <fullName>prefix3</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
                <isActive>false</isActive>
                <label>BE</label>
            </value>
            <value>
                <fullName>LOC</fullName>
                <isActive>false</isActive>
                <label>LOC</label>
            </value>
            <value>
                <fullName>NAT</fullName>
                <isActive>false</isActive>
                <label>NAT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>