force-app/main/default/objects/NegoScope__c/fields/NS_Section_main__c.field-meta.xml
<CustomField>
    <fullName>NS_Section_main__c</fullName>
    <description>Main hierarchy name defined for the NS</description>
    <inlineHelpText>Nom de la hiérarchie principale définie pour le NS</inlineHelpText>
    <label>Main NS Section</label>
    <type>TextArea</type>
</CustomField>