force-app/main/default/objects/NegoScope__c/fields/Parent_Nego_Scope__c.field-meta.xml
<CustomField>
    <fullName>Parent_Nego_Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Nego Scope</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Parent_Nego_Scope__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>NegoScope__c.Supplier__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <filterItems>
            <field>NegoScope__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>NegoScope__c.Parent_Nego_Scope__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NegoScope__c</referenceTo>
    <relationshipLabel>Nego Scopes</relationshipLabel>
    <relationshipName>Nego_Scopes</relationshipName>
    <type>Lookup</type>
</CustomField>