force-app/main/default/objects/NegoScope__c/fields/Rounding_Method__c.field-meta.xml
<CustomField>
    <fullName>Rounding_Method__c</fullName>
    <label>Rounding Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rounding_Method</valueSetName>
    </valueSet>
</CustomField>