force-app/main/default/objects/NegoScope__c/fields/Segmentation_attribut1__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_attribut1__c</fullName>
    <label>Segmentation attribut1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segmentation_attribut1</valueSetName>
    </valueSet>
</CustomField>