force-app/main/default/objects/NegoScope__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Nego Scope</description>
    <inlineHelpText>Spécifier le statut de la portée de négociation. Si Inactif, le périmètre de négociation ne sera pas proposé au propriétaire pour son contrat</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Preparation</fullName>
            </value>
            <value>
                <fullName>Request For Approval</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Request For Stop</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>