force-app/main/default/objects/NegoScope__c/fields/Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Status_BDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Status BDate</label>
    <type>Date</type>
</CustomField>