force-app/main/default/objects/NegoScope__c/fields/Status_EDate__c.field-meta.xml
<CustomField>
    <fullName>Status_EDate__c</fullName>
    <label>Status EDate</label>
    <type>Date</type>
</CustomField>