force-app/main/default/objects/NegoScope__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Is the supplier of the negotiation scope</description>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Supplier Nego Scopes</relationshipLabel>
    <relationshipName>Supplier_Nego_Scopes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>