force-app/main/default/objects/NegoScope__c/fields/Tax_Rounding_Level__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rounding_Level__c</fullName>
    <label>Tax Rounding Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rounding_Level</valueSetName>
    </valueSet>
</CustomField>