force-app/main/default/objects/NegoScope__c/recordTypes/NS_Project.recordType-meta.xml
<RecordType>
    <fullName>NS_Project</fullName>
    <active>true</active>
    <description>New NS in preparation</description>
    <label>NS Project</label>
</RecordType>