force-app/main/default/objects/NegoScope__c/recordTypes/Sub_NS.recordType-meta.xml
<RecordType>
    <fullName>Sub_NS</fullName>
    <active>true</active>
    <description>Is a sub Nego scope (having a parent nego scope)</description>
    <label>Sub NS</label>
</RecordType>