force-app/main/default/objects/NegoScope__c/listViews/X02_My_Nego_Scopes.listView-meta.xml
<ListView>
    <fullName>X02_My_Nego_Scopes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Nego Scopes</label>
</ListView>